Restore and update KomikOnline.html structure

--- a/KomikOnline.html
+++ b/KomikOnline.html
@@ -225,7 +225,7 @@
   <div class="logo">POST KOMIK</div>
   <nav>
     <a href="index.html">HOME</a>
-    <a href="pilihan.html">PILIHAN</a>
+    <a href="Rekomendasi.html">REKOMENDASI</a>
     <a href="daftarkomik.html">DAFTAR KOMIK</a>
   </nav>
   <button class="mode-toggle" onclick="toggleMode()">Mode Gelap/Terang</button>
