--- a/Rekomendasi.html
+++ b/Rekomendasi.html
@@ -250,7 +250,7 @@
   <div class="logo">POST KOMIK</div>
   <nav>
     <a href="index.html">HOME</a>
-    <a href="pilihan.html">REKOMENDASI</a>
+    <a href="Rekomendasi.html">REKOMENDASI</a>
     <a href="daftarkomik.html">DAFTAR KOMIK</a>
   </nav>
   <button class="mode-toggle" onclick="toggleMode()">Mode Gelap / Terang</button>
